--- a/jobhacks/Gemfile
+++ b/jobhacks/Gemfile
@@ -32,6 +32,16 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
+gem 'validates_timeliness'
+gem 'will_paginate'
+
+gem 'bundler', '>= 1.7.0' # needed for rails-assets-materialize
+source 'https://rails-assets.org' do
+  gem 'rails-assets-materialize'
+end
+
+gem 'simple_form'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
