--- a/jobhacks/Gemfile
+++ b/jobhacks/Gemfile
@@ -34,6 +34,11 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 
 gem 'validates_timeliness'
 gem 'will_paginate'
+gem 'font-awesome-sass-rails', '3.0.2.2'
+gem 'jquery-ui-rails', '5.0.3'
+gem 'validates_timeliness', '3.0.14'
+gem 'carrierwave', '0.10.0'
+gem 'time_date_helpers', '0.0.2'
 
 gem 'bundler', '>= 1.7.0' # needed for rails-assets-materialize
 source 'https://rails-assets.org' do
