--- a/jobhacks/Gemfile
+++ b/jobhacks/Gemfile
@@ -35,6 +35,7 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 gem 'will_paginate'
 gem 'font-awesome-sass-rails', '3.0.2.2'
 gem 'jquery-ui-rails', '5.0.3'
+gem 'nested_form', '0.3.2'
 gem 'validates_timeliness', '3.0.14'
 gem 'carrierwave', '0.10.0'
 gem 'time_date_helpers', '0.0.2'
