--- a/jobhacks/Gemfile
+++ b/jobhacks/Gemfile
@@ -35,17 +35,17 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 gem 'will_paginate'
 gem 'font-awesome-sass-rails', '3.0.2.2'
 gem 'jquery-ui-rails', '5.0.3'
+gem 'simple_form'
 gem 'nested_form', '0.3.2'
 gem 'validates_timeliness', '3.0.14'
-gem 'carrierwave', '0.10.0'
 gem 'time_date_helpers', '0.0.2'
+gem "paperclip", "~> 4.3"
 
 gem 'bundler', '>= 1.7.0' # needed for rails-assets-materialize
 source 'https://rails-assets.org' do
   gem 'rails-assets-materialize'
 end
 
-gem 'simple_form'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
